feat: gestion completa de invitados, reconfirmacion, prioridad de posiciones y dropdowns de bandos