@@ -22,8 +22,9 @@ public class MatchmakingService {
     private final UsuarioPosicionRepository usuarioPosicionRepository;
     private final PosicionesDeporteRepository posicionesDeporteRepository;
     private final AsistenciaMapper asistenciaMapper;
+    private final AsistenciaService asistenciaService;
 
-    public List<AsistenciaResponse> runMatchmaking(Long convocatoriaId) {
+    public List<AsistenciaResponse> runMatchmaking(Long convocatoriaId, Integer numEquipos) {
         Convocatoria convocatoria = convocatoriaRepository.findById(convocatoriaId)
                 .orElseThrow(() -> new NotFoundException("Convocatoria no encontrada con id: " + convocatoriaId));
 
@@ -76,11 +77,27 @@ public class MatchmakingService {
         }
         boolean esPorEquipos = deporte.getEsPorEquipos() != null ? deporte.getEsPorEquipos() : true;
 
-        if (esPorEquipos) {
-            return matchmakeByTeams(convocatoria, playersToMatch, allAsistencias);
+        int N;
+        if (numEquipos != null && numEquipos > 0) {
+            N = numEquipos;
         } else {
-            return matchmakeIndividual(convocatoria, playersToMatch, allAsistencias);
+            List<BandoConvocatoria> existing = bandoRepository.findByConvocatoriaId(convocatoriaId);
+            if (!existing.isEmpty()) {
+                N = existing.size();
+            } else {
+                N = esPorEquipos ? 2 : 1;
+            }
         }
+
+        if (!esPorEquipos && numEquipos == null && bandoRepository.findByConvocatoriaId(convocatoriaId).isEmpty()) {
+            return matchmakeIndividual(convocatoria, playersToMatch, allAsistencias);
+        } else {
+            return matchmakeByTeams(convocatoria, playersToMatch, allAsistencias, N);
+        }
+    }
+
+    public List<AsistenciaResponse> runMatchmaking(Long convocatoriaId) {
+        return runMatchmaking(convocatoriaId, null);
     }
 
     private List<AsistenciaResponse> matchmakeIndividual(Convocatoria convocatoria, List<Asistencia> players, List<Asistencia> allAsistencias) {
@@ -111,26 +128,37 @@ public class MatchmakingService {
             asistenciaRepository.saveAll(modified);
         }
 
-        return asistenciaRepository.findByConvocatoriaId(convocatoria.getId()).stream()
+        List<AsistenciaResponse> responses = asistenciaRepository.findByConvocatoriaId(convocatoria.getId()).stream()
                 .map(asistenciaMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
+        Long deporteId = convocatoria.getDeporte() != null ? convocatoria.getDeporte().getId() : null;
+        asistenciaService.populateUserPositions(responses, deporteId);
+        return responses;
     }
 
-    private List<AsistenciaResponse> matchmakeByTeams(Convocatoria convocatoria, List<Asistencia> playersToMatch, List<Asistencia> allAsistencias) {
+    private List<AsistenciaResponse> matchmakeByTeams(Convocatoria convocatoria, List<Asistencia> playersToMatch, List<Asistencia> allAsistencias, int numEquipos) {
         List<BandoConvocatoria> teams = bandoRepository.findByConvocatoriaId(convocatoria.getId());
-        if (teams.isEmpty()) {
-            BandoConvocatoria teamA = BandoConvocatoria.builder()
-                    .convocatoria(convocatoria).nombre("Equipo A").color("Azul").build();
-            BandoConvocatoria teamB = BandoConvocatoria.builder()
-                    .convocatoria(convocatoria).nombre("Equipo B").color("Rojo").build();
-            teams = List.of(bandoRepository.save(teamA), bandoRepository.save(teamB));
-        } else if (teams.size() == 1) {
-            BandoConvocatoria teamB = BandoConvocatoria.builder()
-                    .convocatoria(convocatoria).nombre("Equipo B").color("Rojo").build();
-            teams = List.of(teams.get(0), bandoRepository.save(teamB));
+        List<BandoConvocatoria> finalTeams = new ArrayList<>(teams);
+        int N = numEquipos;
+
+        if (finalTeams.size() < N) {
+            String[] names = {"A", "B", "C", "D", "E", "F", "G", "H"};
+            String[] colors = {"Azul", "Rojo", "Verde", "Amarillo", "Naranja", "Gris", "Celeste", "Negro"};
+            int needed = N - finalTeams.size();
+            for (int i = 0; i < needed; i++) {
+                int idx = finalTeams.size();
+                String name = "Equipo " + (idx < names.length ? names[idx] : String.valueOf(idx + 1));
+                String color = idx < colors.length ? colors[idx] : "Gris";
+                BandoConvocatoria newTeam = bandoRepository.save(BandoConvocatoria.builder()
+                        .convocatoria(convocatoria).nombre(name).color(color).build());
+                finalTeams.add(newTeam);
+            }
+        } else if (finalTeams.size() > N) {
+            while (finalTeams.size() > N) {
+                BandoConvocatoria extra = finalTeams.remove(finalTeams.size() - 1);
+                bandoRepository.delete(extra);
+            }
         }
-        BandoConvocatoria teamA = teams.get(0);
-        BandoConvocatoria teamB = teams.get(1);
 
         List<Long> userIds = playersToMatch.stream()
                 .map(a -> a.getUsuario() != null ? a.getUsuario().getId() : null)
@@ -143,8 +171,7 @@ public class MatchmakingService {
 
         List<PosicionesDeporte> sportPositions = posicionesDeporteRepository.findByDeporteId(convocatoria.getDeporte().getId());
 
-        Set<Asistencia> unassigned = new LinkedHashSet<>(playersToMatch);
-        List<Pair> balancedPairs = new ArrayList<>();
+        List<Asistencia> playersToDistribute = new ArrayList<>(playersToMatch);
         List<Asistencia> comodinesList = new ArrayList<>();
 
         if ("COMODIN".equals(convocatoria.getManejoExcedente()) && convocatoria.getCupoMaximo() != null && convocatoria.getCupoMaximo() > 0 && playersToMatch.size() > convocatoria.getCupoMaximo()) {
@@ -152,84 +179,66 @@ public class MatchmakingService {
             for (int i = standardCount; i < playersToMatch.size(); i++) {
                 Asistencia comodinPlayer = playersToMatch.get(i);
                 comodinesList.add(comodinPlayer);
-                unassigned.remove(comodinPlayer);
+                playersToDistribute.remove(comodinPlayer);
             }
         }
 
-        for (PosicionesDeporte pos : sportPositions) {
-            List<Asistencia> prio1Players = new ArrayList<>();
-            for (Asistencia a : unassigned) {
-                if (a.getUsuario() != null) {
-                    List<UsuarioPosicion> upList = userPositionsMap.getOrDefault(a.getUsuario().getId(), List.of());
-                    boolean isPrio1 = upList.stream().anyMatch(up -> up.getPosicion().getId().equals(pos.getId()) && up.getPrioridad() == 1);
-                    if (isPrio1) prio1Players.add(a);
-                }
-            }
-            while (prio1Players.size() >= 2) {
-                Asistencia p1 = prio1Players.remove(0);
-                Asistencia p2 = prio1Players.remove(0);
-                unassigned.remove(p1); unassigned.remove(p2);
-                balancedPairs.add(new Pair(p1, p2, pos, pos));
-            }
+        // Map players to their default/primary position
+        Map<Asistencia, PosicionesDeporte> playerPosMap = new HashMap<>();
+        for (Asistencia p : playersToDistribute) {
+            playerPosMap.put(p, getDefaultPosition(p, sportPositions, userPositionsMap));
         }
 
-        for (PosicionesDeporte pos : sportPositions) {
-            List<Asistencia> p1Leftovers = unassigned.stream()
-                    .filter(a -> {
-                        if (a.getUsuario() == null) return false;
-                        List<UsuarioPosicion> upList = userPositionsMap.getOrDefault(a.getUsuario().getId(), List.of());
-                        return upList.stream().anyMatch(up -> up.getPosicion().getId().equals(pos.getId()) && up.getPrioridad() == 1);
-                    }).collect(Collectors.toList());
-            for (Asistencia p1 : p1Leftovers) {
-                if (!unassigned.contains(p1)) continue;
-                Asistencia partner = null; PosicionesDeporte partnerPos = null;
-                for (Asistencia candidate : unassigned) {
-                    if (candidate.equals(p1) || candidate.getUsuario() == null) continue;
-                    List<UsuarioPosicion> upList = userPositionsMap.getOrDefault(candidate.getUsuario().getId(), List.of());
-                    Optional<UsuarioPosicion> p2Opt = upList.stream().filter(up -> up.getPosicion().getId().equals(pos.getId()) && up.getPrioridad() == 2).findFirst();
-                    if (p2Opt.isPresent()) { partner = candidate; partnerPos = p2Opt.get().getPosicion(); break; }
-                }
-                if (partner == null) {
-                    for (Asistencia candidate : unassigned) {
-                        if (candidate.equals(p1) || candidate.getUsuario() == null) continue;
-                        List<UsuarioPosicion> upList = userPositionsMap.getOrDefault(candidate.getUsuario().getId(), List.of());
-                        Optional<UsuarioPosicion> p3Opt = upList.stream().filter(up -> up.getPosicion().getId().equals(pos.getId()) && up.getPrioridad() == 3).findFirst();
-                        if (p3Opt.isPresent()) { partner = candidate; partnerPos = p3Opt.get().getPosicion(); break; }
+        // Group players by position
+        Map<PosicionesDeporte, List<Asistencia>> playersByPos = new HashMap<>();
+        for (Asistencia p : playersToDistribute) {
+            PosicionesDeporte pos = playerPosMap.get(p);
+            playersByPos.computeIfAbsent(pos, k -> new ArrayList<>()).add(p);
+        }
+
+        // Keep track of bando sizes and specific position counts per bando
+        Map<BandoConvocatoria, Integer> bandoTotalSize = new HashMap<>();
+        Map<BandoConvocatoria, Map<PosicionesDeporte, Integer>> bandoPosCount = new HashMap<>();
+        for (BandoConvocatoria b : finalTeams) {
+            bandoTotalSize.put(b, 0);
+            bandoPosCount.put(b, new HashMap<>());
+        }
+
+        List<Asistencia> modified = new ArrayList<>();
+
+        // Distribute players position by position
+        for (Map.Entry<PosicionesDeporte, List<Asistencia>> entry : playersByPos.entrySet()) {
+            PosicionesDeporte pos = entry.getKey();
+            List<Asistencia> group = entry.getValue();
+
+            for (Asistencia p : group) {
+                // Find the best team to assign this player to
+                BandoConvocatoria bestBando = null;
+                int minPosCount = Integer.MAX_VALUE;
+                int minTotalSize = Integer.MAX_VALUE;
+
+                for (BandoConvocatoria b : finalTeams) {
+                    int posCount = bandoPosCount.get(b).getOrDefault(pos, 0);
+                    int totalSize = bandoTotalSize.get(b);
+
+                    if (posCount < minPosCount) {
+                        minPosCount = posCount;
+                        minTotalSize = totalSize;
+                        bestBando = b;
+                    } else if (posCount == minPosCount) {
+                        if (totalSize < minTotalSize) {
+                            minTotalSize = totalSize;
+                            bestBando = b;
+                        }
                     }
                 }
-                if (partner != null) { unassigned.remove(p1); unassigned.remove(partner); balancedPairs.add(new Pair(p1, partner, pos, partnerPos)); }
-            }
-        }
 
-        List<Asistencia> leftoversList = new ArrayList<>(unassigned);
-        while (leftoversList.size() >= 2) {
-            Asistencia p1 = leftoversList.remove(0); Asistencia p2 = leftoversList.remove(0);
-            unassigned.remove(p1); unassigned.remove(p2);
-            balancedPairs.add(new Pair(p1, p2, getDefaultPosition(p1, sportPositions, userPositionsMap), getDefaultPosition(p2, sportPositions, userPositionsMap)));
-        }
-
-        int sizeA = 0, sizeB = 0;
-        List<Asistencia> pairModified = new ArrayList<>();
-
-        for (Pair pair : balancedPairs) {
-            if (sizeA <= sizeB) {
-                assignPlayer(pair.p1, pair.pos1, teamA); assignPlayer(pair.p2, pair.pos2, teamB);
-            } else {
-                assignPlayer(pair.p1, pair.pos1, teamB); assignPlayer(pair.p2, pair.pos2, teamA);
-            }
-            sizeA++; sizeB++;
-            pairModified.add(pair.p1); pairModified.add(pair.p2);
-        }
-
-        if (!leftoversList.isEmpty()) {
-            Asistencia last = leftoversList.remove(0);
-            unassigned.remove(last);
-            PosicionesDeporte posLast = getDefaultPosition(last, sportPositions, userPositionsMap);
-            if ("COMODIN".equals(convocatoria.getManejoExcedente())) {
-                comodinesList.add(last);
-            } else {
-                if (sizeA <= sizeB) assignPlayer(last, posLast, teamA); else assignPlayer(last, posLast, teamB);
-                pairModified.add(last);
+                if (bestBando != null) {
+                    assignPlayer(p, pos, bestBando);
+                    bandoTotalSize.put(bestBando, bandoTotalSize.get(bestBando) + 1);
+                    bandoPosCount.get(bestBando).put(pos, bandoPosCount.get(bestBando).getOrDefault(pos, 0) + 1);
+                    modified.add(p);
+                }
             }
         }
 
@@ -237,16 +246,19 @@ public class MatchmakingService {
             comodin.setBando(null);
             PosicionesDeporte pos = getDefaultPosition(comodin, sportPositions, userPositionsMap);
             comodin.setPosicionAsignada(pos);
-            pairModified.add(comodin);
+            modified.add(comodin);
         }
 
-        if (!pairModified.isEmpty()) {
-            asistenciaRepository.saveAll(pairModified);
+        if (!modified.isEmpty()) {
+            asistenciaRepository.saveAll(modified);
         }
 
-        return asistenciaRepository.findByConvocatoriaId(convocatoria.getId()).stream()
+        List<AsistenciaResponse> responses = asistenciaRepository.findByConvocatoriaId(convocatoria.getId()).stream()
                 .map(asistenciaMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
+        Long deporteId = convocatoria.getDeporte() != null ? convocatoria.getDeporte().getId() : null;
+        asistenciaService.populateUserPositions(responses, deporteId);
+        return responses;
     }
 
     private PosicionesDeporte getPreferredPosition(Asistencia a) {
